--- a/location-application/location-webapp/src/main/webapp/css/autosuggest.css
+++ b/location-application/location-webapp/src/main/webapp/css/autosuggest.css
@@ -1,14 +1,12 @@
 .ausu-suggestionsBox
 {
-    left: 0px;
-    top:-2px;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 11px;
-    width: 200px;
-    padding:0px;
-    color: #fff;
+    color: #FFFFFF;
     display: none;
-    padding: 0 0 0 0;
+    font-family: Arial,Helvetica,sans-serif;
+    font-size: 11px;
+    position: absolute;
+    width: 200px;
+    z-index: 0;
 }
 .ausu-suggestionsBox ul
 {
